--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
     "typescript": "^5.1.3"
